test/error/syntax/err3.rzy
// use of reserved keyword (R) as template argument name

Rec{R:Any} = Record
  a : R;
end

Err3 = Component
elementary
  dat: Rec{Boolean} = [ a := False ];
end

